--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,22 +1,15 @@
-name: Deploy to GitHub Pages
+name: Deploy to gh-pages Branch
 
 on:
   push:
-    branches: ["main"] # Ensure this matches your default branch (main or master)
+    branches: ["main"] # Ensure this matches your default branch
 
 permissions:
-  contents: read
-  pages: write
-  id-token: write
-
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
+  contents: write # ⚠️ REQUIRED: Allows the bot to push to the gh-pages branch
 
 jobs:
-  build:
-    # ⬇️ THIS IS THE NEW CONDITION ⬇️
-    # The job only runs if the commit message contains the word "build" (case-insensitive)
+  build-and-deploy:
+    # Only run if commit message contains "build"
     if: contains(github.event.head_commit.message, 'build')
     
     runs-on: ubuntu-latest
@@ -33,22 +26,12 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Build with Next.js
+      - name: Build Static Site
         run: npm run build
+        # This creates the 'out' folder based on your next.config.js
 
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v3
+      - name: Deploy to gh-pages branch
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          path: ./out
-
-  deploy:
-    environment:
-      name: github-pages
-      url: ${{ steps.deployment.outputs.page_url }}
-    runs-on: ubuntu-latest
-    # Since deploy 'needs' build, if build is skipped, deploy is automatically skipped.
-    needs: build
-    steps:
-      - name: Deploy to GitHub Pages
-        id: deployment
-        uses: actions/deploy-pages@v4
+          folder: out # The folder the action should deploy
+          branch: gh-pages # The branch the action should deploy to
